Z-index fix

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -142,7 +142,7 @@
     .container-left {
         a {
             position: absolute;
-            z-index: 10;
+            z-index: 0;
             top: rem(55);
         }
     }
